--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -53,7 +53,7 @@
                 </div>
                 
                 <div class="mt-4 text-center">
-                    <a href="#" class="btn btn-outline-primary btn-sm px-4 py-2">Переглянути портфоліо</a>
+                    <a href="{% url 'portfolio_detail' portfolio.id %}" class="btn btn-outline-primary btn-sm px-4 py-2">Переглянути портфоліо</a>
                 </div>
 
             </div>
