--- a/templates/pages/portfolio_detail.html
+++ b/templates/pages/portfolio_detail.html
@@ -68,7 +68,7 @@
                     style="min-height: 100px; cursor: pointer; opacity: 0.7;"
                     data-bs-toggle="modal" 
                     data-bs-target="#addBalanceItemModal">
-                <span class="fs-1 text-muted">+</span>
+                <span class="fs-1" style="color: var(--text-muted)">+</span>
             </button>
         </div>
     </div>
