--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <title>{% block title %}Assetly{% endblock %}</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     {% block extra_css %}{% endblock %}
@@ -27,7 +27,17 @@
 
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'create_portfolio' %}" class="nav-link">Створити портфоліо</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'debt_list' %}" class="nav-link">Список боргів</a>
+                    </li>
+                     <li class="nav-item">
+                        <a href="{% url 'subscriptions_and_credits' %}" class="nav-link">Підписки та Кредити</a>
+                    </li>
+                    {% endif %}
                 </ul>
 
                 <ul class="navbar-nav ms-auto">
